--- a/.github/workflows/main_rdreactappnode18.yml
+++ b/.github/workflows/main_rdreactappnode18.yml
@@ -67,5 +67,5 @@ jobs:
         with:
           app-name: 'rdreactappnode18'
           slot-name: 'Production'
-          package: .
+          package: build
           
