--- a/.github/workflows/main_rdreactappnode18.yml
+++ b/.github/workflows/main_rdreactappnode18.yml
@@ -55,6 +55,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'sitename'
+          app-name: 'rdreactappnode18'
           slot-name: 'Production'
           package: .
